--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css"> -->
+  <!-- <script src="bower_components/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script> -->
+  <!-- <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script> -->
+
 </head>
 <body>
   <app-root></app-root>
